Refactor backend application (#20)

--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,7 @@
-PROJECT_NAME=backend
-BACKEND_CORS_ORIGINS=["http://localhost:8000", "https://localhost:8000", "http://localhost", "https://localhost"]
+PROJECT_NAME=
+BACKEND_CORS_ORIGINS=
 SECRET_KEY=
-
+JWT_SECRET=
+JWT_ALGORITHM=
+JWT_TOKEN_EXPIRE_MINUTES=
+SQLITE_DATABASE_URL=
